--- a/src/sensors/configs/car-wall-distance-sensor-config.toml
+++ b/src/sensors/configs/car-wall-distance-sensor-config.toml
@@ -1,6 +1,8 @@
 [sensor]
 id="0ab43949-fc39-40ca-ae0c-db395f469f35"
+name="car-wall distance sensor"
 topic="sensors_topic"
+data_topic="sensor_readings_topic"
 frequency=1.0
 type="Distance"
 
