--- a/src/sensors/configs/temperature-sensor-config.toml
+++ b/src/sensors/configs/temperature-sensor-config.toml
@@ -1,6 +1,8 @@
 [sensor]
 id="42af02c0-79b5-4803-97e6-0ef37f51035c"
+name="temperature sensor"
 topic="sensors_topic"
+data_topic="sensor_readings_topic"
 frequency=1.0
 type="Temperature"
 
