--- a/sensors_producers/configs/humidity-sensor-config.toml
+++ b/sensors_producers/configs/humidity-sensor-config.toml
@@ -1,12 +1,12 @@
 [sensor]
-id="42af02c0-79b5-4803-97e6-0ef37f51035c"
-name="humidity sensor"
-topic="sensors_topic"
-data_topic="sensor_readings_topic"
-frequency=1.0
-type="Distance"
+id = "3c32afb6-ff49-448f-8a07-2693bdd3abc0"
+name = "humidity sensor"
+topic = "sensors_topic"
+data_topic = "sensor_readings_topic"
+frequency = 1.0
+type = "Distance"
 
 [producer]
-bootstrap_servers=""
-acks=0
-api_version=[3, 4, 0]
+bootstrap_servers = "broker:9092"
+acks = 0
+api_version = [3, 4, 0]
